# SE-LeaveRequestSystem

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  app.py  coverage.xml  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: python-tests.yml
SE_LeaveRequestSystem/: app.py
SE_LeaveRequestSystem/db/: models.py
SE_LeaveRequestSystem/handlers/: auth.py  home.py  leave.py
SE_LeaveRequestSystem/routes/: auth.py  home.py  leave.py
SE_LeaveRequestSystem/templates/: not_found.html
db/: leave.py  models.py
handlers/: auth.py  home.py  leave.py
instance/: leave_request.db
routes/: auth.py  home.py  leave.py
se_leaverequestsystem/: __init__.py  app.py
se_leaverequestsystem/db/: leave.py  models.py
se_leaverequestsystem/handlers/: auth.py  home.py  leave.py
se_leaverequestsystem/routes/: auth.py  home.py  leave.py
se_leaverequestsystem/static/js/: main.js  nav.js
se_leaverequestsystem/templates/: base.html  index.html
src/SE_LeaveRequestSystem/: app.py
src/SE_LeaveRequestSystem/db/: leave.py
src/SE_LeaveRequestSystem/handlers/: auth.py  home.py  leave.py
src/SE_LeaveRequestSystem/routes/: auth.py  home.py  leave.py
static/css/: main.css
static/js/: main.js  nav.js
templates/: base.html  index.html  not_found.html
tests/: conftest.py  test_auth.py  test_home.py  test_leave.py
tests/leave/: test_delete.py  test_post.py
