[tool.poetry]
name = "se_leaverequestsystem"
version = "0.1.0"
description = ""
authors = ["aleandre6579 <aleandre6579.simon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
flask-sqlalchemy = "^3.1.1"
pytest = "^7.4.4"
pre-commit = "^3.6.0"
flake8 = "^7.0.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
